# OUROBOROS

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  install.py  ouroboros.1
config/: ouroboros.toml.example
docs/: ARCHITECTURE.md  BEFORE_AFTER.txt  BEFORE_AFTER_UI_COMPARISON.txt  BUG_REPORT_FINAL.md  COMPLETE_UI_DETAILED.txt  COMPLETE_UI_VISUALIZATION.txt  TERMINAL_THEME_README.md  TEST_RESULTS.md  TEST_SUITE_MASTER_README.md  TEST_SUITE_README.md
include/audio/: AudioDecoder.hpp  AudioRingBuffer.hpp  DSDDecoder.hpp  FLACDecoder.hpp  M4ADecoder.hpp  MP3Decoder.hpp  OGGDecoder.hpp  PipeWireContext.hpp  PipeWireOutput.hpp
include/backend/: ArtworkCache.hpp  Config.hpp  HierarchicalCache.hpp  Library.hpp  MetadataCache.hpp  MetadataParser.hpp  PipeWireClient.hpp  Queue.hpp  SnapshotBuffers.hpp  SnapshotPublisher.hpp
include/collectors/: LibraryCollector.hpp  PlaybackCollector.hpp
include/config/: KeyMap.hpp  Theme.hpp  UIConfig.hpp
include/events/: EventBus.hpp  Scheduler.hpp
include/model/: Snapshot.hpp
include/ui/: Animation.hpp  ArtworkLoader.hpp  ArtworkWindow.hpp  Canvas.hpp  Color.hpp  Component.hpp  FlexLayout.hpp  Formatting.hpp  ImageRenderer.hpp  InputEvent.hpp  LayoutConstraints.hpp  Renderer.hpp  Terminal.hpp  VisualBlocks.hpp
include/ui/widgets/: AlbumBrowser.hpp  Browser.hpp  Controls.hpp  DirectoryBrowser.hpp  HelpOverlay.hpp  NowPlaying.hpp  Queue.hpp  SearchBox.hpp  StatusBar.hpp
include/util/: ArtworkHasher.hpp  BoyerMoore.hpp  DirectoryScanner.hpp  ImageDecoderPool.hpp  Logger.hpp  Platform.hpp  TimSort.hpp  TomlReader.hpp  UnicodeUtils.hpp
src/: main.cpp
src/audio/: DSDDecoder.cpp  FLACDecoder.cpp  M4ADecoder.cpp  MP3Decoder.cpp  OGGDecoder.cpp  PipeWireContext.cpp  PipeWireOutput.cpp
src/backend/: ArtworkCache.cpp  Config.cpp  HierarchicalCache.cpp  Library.cpp  MetadataCache.cpp  MetadataParser.cpp  PipeWireClient.cpp  Queue.cpp  SnapshotBuffers.cpp  SnapshotPublisher.cpp
src/collectors/: LibraryCollector.cpp  PlaybackCollector.cpp
src/config/: KeyMap.cpp  Theme.cpp  UIConfig.cpp
src/events/: EventBus.cpp  Scheduler.cpp
src/model/: Snapshot.cpp
src/ui/: Animation.cpp  ArtworkLoader.cpp  ArtworkWindow.cpp  Canvas.cpp  Component.cpp  FlexLayout.cpp  Formatting.cpp  ImageRenderer.cpp  Renderer.cpp  Terminal.cpp  VisualBlocks.cpp
src/ui/widgets/: AlbumBrowser.cpp  Browser.cpp  Controls.cpp  DirectoryBrowser.cpp  HelpOverlay.cpp  NowPlaying.cpp  Queue.cpp  SearchBox.cpp  StatusBar.cpp
src/util/: ArtworkHasher.cpp  BoyerMoore.cpp  DirectoryScanner.cpp  ImageDecoderPool.cpp  Logger.cpp  Platform.cpp  TimSort.cpp
tests/: CMakeLists.txt  verify_previous_fix.sh
tests/framework/: SimpleTest.hpp
tests/integration/: test_pipeline.cpp
tests/unit/: test_core.cpp  test_utils.cpp
